# siscontjson_docker

./: .env  .env _example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  No_salvar_en_archivos_json_cuando_exporta.txt  README.md  cambios_variables_globales.txt  cambios_variables_globales_OK_Final.txt  config.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yaml  main.py  package-lock.json  pyproject.toml  requirements.txt
.nicegui/: storage-user-2ca52258-1a68-4926-ae90-47fdf9446134.json
api/: api_activos_fijos.py  api_almacen.py  api_costo.py  api_cp.py  api_cuentas.py  api_db.py  api_general.py  api_nomina.py  api_productos.py
db/: cuentas.xlsx  db_activos_fijos.py  db_almacen.py  db_connection.py  db_costo.py  db_cp.py  db_cuentas.py  db_general.py  db_manager.py  db_nomina.py  db_productos.py  recuperar.py
services/: activos_fijos_client.py  almacen_client.py  base_client.py  costo_client.py  cp_client.py  cuentas_client.py  general_client.py  nomina_client.py  productos_client.py
state/: store.py
ui/components/: header.py  sidebar.py
ui/pages/: login.py  main_page.py
ui/pages/modules/: activos_fijos_view.py  almacen_view.py  base_view.py  cobros_pagos_view.py  compras_view.py  contabilidad_general_view.py  costo_view.py  cuentas_view.py  general_view.py  inicio_view.py  inventarios_view.py  nomina_view.py  productos_view.py  recursos_humanos_view.py  ventas_view.py
utils/: csv_utils.py  download_manager.py  jsons_utils.py  serializations.py
